# glaspen2

./: .gitignore  Cargo.toml  LICENSE  OverlayForm_restored.cs  README.md  README_EN.md  build-dmg.sh  build.rs  build_all.bat  build_all.sh  glaspen2.icns  note.md  package.ps1
.cargo/: config.toml
.mimocode/plans/: 1781500364066-jolly-island.md
docs/: feature-pressure-analysis.md  win-pen-pressure-diagnosis.md
flutter_settings/: README.md  pubspec.yaml
flutter_settings/lib/: main.dart
flutter_settings/macos/Runner/: MainFlutterWindow.swift
flutter_settings/macos/Runner.xcodeproj/: project.pbxproj
flutter_settings/macos/Runner.xcodeproj/xcshareddata/xcschemes/: Runner.xcscheme
flutter_settings/macos/Runner/Configs/: AppInfo.xcconfig
flutter_settings/test/: widget_test.dart
flutter_settings/windows/: CMakeLists.txt
flutter_settings/windows/runner/: Runner.rc  main.cpp
glaspen2_csharp/: FakeStrokeForm.cs  GlaspenNative.cs  HidPenReader.cs  HidProbe2.cs  NativeMethods.cs  OverlayForm.cs  PenInterceptor.cs  PressureForm.cs  PressureProbe.cs  Program.cs  SettingsPipeServer.cs  SimpleJson.cs  Wintab.cs  glaspen2.db
glaspen2_csharp/_bak/: HidReader.cs  InputWindow.cs  PenInterceptor.cs
installer/: Installer.cs
models/: ppocr_v6_dict.json
python_test/: generate_test_image.py  requirements.txt  test_ocr.py
python_test/output/: test_handwritten_from_db_res.json  test_handwritten_synthetic_res.json
scripts/: build-dmg.sh  package.sh
src/: cairo_renderer.rs  cairo_stub.rs  db.rs  draw.rs  export.rs  glaspen2.m  lib.rs  macos.rs  main.rs  main.rs.cgeventtap  modeler.rs  ocr.rs  pdf.rs  state.rs  windows.rs  ws.rs
src/macos/: glaspen2.m  mod.rs
src/ocr/: det.rs  mod.rs  rec.rs
src/old20260513/: macos_helper.m  main.rs
src/windows/: cairo_dl.rs  hook_overlay.rs  input.rs  mod.rs  overlay.rs  overlay_gtk.rs  render.rs  tray.rs
