[package]
name = "glaspen2"
version = "0.1.2"
edition = "2021"

[features]
default = ["cairo_real"]
cairo_real = []

[build-dependencies]
cc = "1"
pkg-config = "0.3"

[dependencies]
image = "0.25"
gif = "0.13"
color_quant = "1.1"
flate2 = "1"
rusqlite = { version = "0.31", features = ["bundled"] }
ink-stroke-modeler-rs = "0.1"

[target.'cfg(not(windows))'.dependencies]
cairo-rs = "0.20"

[target.'cfg(target_os = "macos")'.dependencies]
objc = "0.2"

[target.'cfg(windows)'.dependencies]
windows = { version = "0.58", features = [
    "Win32_Foundation",
    "Win32_Graphics_Gdi",
    "Win32_Graphics_Dwm",
    "Win32_UI_WindowsAndMessaging",
    "Win32_UI_Input_KeyboardAndMouse",
    "Win32_System_LibraryLoader",
    "Win32_System_Threading",
    "Win32_UI_Shell",
] }
tray-icon = "0.20"
