[package]
name = "glaspen2"
version = "0.2.2"
edition = "2021"

[lib]
name = "glaspen2"
crate-type = ["cdylib", "rlib"]

[features]
default = ["cairo_real"]
cairo_real = []

[build-dependencies]
cc = "1"
pkg-config = "0.3"

[dependencies]
image = "0.25"
gif = "0.13"
color_quant = "1.1"
flate2 = "1"
rayon = "1"
sqlx = { version = "0.8", features = ["runtime-tokio", "sqlite"] }
tokio = { version = "1", features = ["rt", "rt-multi-thread", "macros"] }
ink-stroke-modeler-rs = "0.1"

[target.'cfg(not(windows))'.dependencies]
cairo-rs = "0.20"

[target.'cfg(target_os = "macos")'.dependencies]
objc = "0.2"

[target.'cfg(windows)'.dependencies]
# gtk4 = { version = "0.10", features = ["v4_16"] } # disabled — requires GTK4 runtime DLLs
libloading = "0.8"
windows = { version = "0.58", features = [
    "Win32_Foundation",
    "Win32_Graphics_Gdi",
    "Win32_Graphics_Dwm",
    "Win32_UI_WindowsAndMessaging",
    "Win32_UI_Controls",
    "Win32_UI_Input_KeyboardAndMouse",
    "Win32_UI_Input_Pointer",
    "Win32_System_LibraryLoader",
    "Win32_System_Threading",
    "Win32_System_SystemInformation",
    "Win32_System_Console",
    "Win32_UI_Shell",
    "Win32_UI_Input",
    "Win32_Devices_HumanInterfaceDevice",
] }
tray-icon = "0.20"
